crates/swc_ecma_parser/tests/test262-error-references/fail/a633b3217b5b8026.js.stderr
error: Cannot assign to this
 --> $DIR/tests/test262-parser/fail/a633b3217b5b8026.js:1:2
  |
1 | ({a} += 0);
  |  ^^^

